@@ -30,6 +30,7 @@ Cacti CHANGELOG
 -bug#0001286: poller_item cache is not updated when "Data Input Method" is changed 
 -bug#0001288: A host with ICMP ping selected as method does not properly perform ping
 -bug#0001291: Reapply Suggested Names fails on Script Queries
+-bug#0001293: When Creating Data Query Graphs, Performing Search will Cause List to Disappear 
 -bug: Host save failed in FireFox 3 for non-SNMP V3 hosts, complaining about "password mismatch"
 -bug: Initialization of snmp_auth when using SNMP=NONE
 -bug: Speed up add_graphs.php in most cases (still slow only if --input-fields is used)
@@ -76,6 +77,7 @@ Cacti CHANGELOG
 -feature: When reindexing hosts, allow a queryid to be specified
 -feature: Add command line Database upgrade script
 -feature: Add api call to associate graphs with their data sources
+-feature: Move the notes field to bottom of page
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
